# shufflebox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/shufflebox/: app.py  library.py  player.py  queue.py  reader.py  session.py  shuffler.py  stats.py  ui.py
tests/: conftest.py  create_fixtures.py  test_library.py  test_player.py  test_queue.py  test_reader.py  test_session.py  test_shuffler.py  test_stats.py
