[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shufflebox"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mutagen>=1.47", "pygame-ce>=2.5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
shufflebox = "shufflebox.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
